--- a/src/App.css
+++ b/src/App.css
@@ -13,4 +13,18 @@
   background-color: rgb(127, 255, 212);
   background-color: #afafaf   ;
  
+
+}
+
+.leftuser {
+  margin-left: 17%;
+  text-align: center;
+  font-family: 'Poppins';
+  font-size: 19px;
+}
+.userleft {
+  width: 80%;
+  margin: 0 auto;
+  padding: 50px 0;
+  box-sizing: border-box;
 }
