--- a/src/components/Topright.module.css
+++ b/src/components/Topright.module.css
@@ -35,3 +35,7 @@
     font-family: 'Questrial';
     font-size: 16px;
 }
+.search input:focus  {
+    outline: none !important;
+    border: none !important;
+}
