--- a/src/components/card.module.css
+++ b/src/components/card.module.css
@@ -27,6 +27,7 @@
     margin-top: 50px;
     margin-bottom: 20px;
     font-family: 'Magmawave caps';
-    font-size: 'Poppins';
-    font-size: 19px;
+    font-family: 'Poppins';
+    font-size: 20px;
+    font-weight: 600;
 }
