--- a/src/components/homepage.module.css
+++ b/src/components/homepage.module.css
@@ -31,5 +31,11 @@
     font-family: 'Poppins';
     font-size: 20px;
     padding : 18px 0 12px 20px;
-    font-weight: 500;
+    font-weight: 600;
+}
+
+.map {
+    width: 90%;
+    height: 550px;
+    margin: 50px auto 0;
 }
