--- a/src/components/homepage.module.css
+++ b/src/components/homepage.module.css
@@ -8,8 +8,9 @@
 }
 .both {
     grid-column: span 8;
-    
+   
     box-shadow: 5px 9px 21px 0 rgb(46, 61, 73,  20%);
+    box-shadow: rgb(145, 158, 171,  24%) 0px 0px 2px 0px, rgb(145, 158, 171,  24%) 0px 16px 32px;
 }
 .chart {
     width: 90%;
