--- a/src/components/left.module.css
+++ b/src/components/left.module.css
@@ -22,7 +22,7 @@
     margin-top: 15px;
    display: flex;
    column-gap: 8px;
-    height: 48px;
+    height: 60px;
     background : #efefef;
     padding: 5px;
     border-radius: 10px;
@@ -84,6 +84,8 @@ ul {
 li.actif {
     background-color: rgb(126, 235, 156, .65);
     background-color: rgb(0, 36, 105);
+   
+    background-color: rgba(0, 171, 85, 0.08);
     background-color: #7fffd4;
     color : #222;
     
@@ -91,8 +93,9 @@ li.actif {
     border-radius: 25px 0 0 25px;
     line-height: 1.8rem;
     box-sizing: border-box;
+  
+    color: rgb(0, 171, 85);
     color: rgb(8, 71, 8);
-    
     border-right: 3px solid rgb(12, 129, 12);
     /* border-right: 3px solid rgb(223, 1, 0); */
 }
@@ -106,7 +109,7 @@ i {
 }
 /************************output subsettings****************************/
 .showparams {
-    margin-left: 70px;
+    margin-left: 60px;
   }
   .showparams  ul  li {
     font-family: 'Poppins';
@@ -118,14 +121,17 @@ i {
       margin-top: 3px;
     background-color: #e5e5ed;
     background-color: #00bfff;;
+    background-color: #F0F7FF;
     color : #222;
-    
-    padding : 8px;
+  ;
+    padding : 8px 0 8px 20px;
     border-radius: 25px 0 0 25px;
     line-height: 1.5rem;
     box-sizing: border-box;
     color: rgb(8, 71, 8);
     color : #fff;
+    color: #007FFF;
+    font-weight: 700;
     border-right: 3px solid rgb(12, 129, 12);
     border-right: 3px solid rgb(51, 17, 161);;
   }
