--- a/src/components/table.module.css
+++ b/src/components/table.module.css
@@ -1,7 +1,8 @@
 .userform {
-    width: 80%;
+    width: 90%;
     margin: 50px auto;
     height: auto;
-    height: 520px;
+    height: auto;
+ 
     box-shadow: 5px 9px 21px 0 rgb(46, 61, 73,  20%);
 }
