--- a/src/components/left.module.css
+++ b/src/components/left.module.css
@@ -20,16 +20,17 @@
 
 .logocon {
     margin-top: 15px;
-   display: flex;
-   column-gap: 8px;
-    height: 60px;
+    display: flex;
+    column-gap: 10px;
+    height: auto;
     background : #efefef;
     padding: 5px;
     border-radius: 10px;
+    
 }
-.logocon .user i{
+.logocon .user {
     font-size: 35px;
-    line-height: 45px;
+ 
 }
 .logo{
     display: none;
