--- a/src/components/table.module.css
+++ b/src/components/table.module.css
@@ -2,7 +2,9 @@
     width: 90%;
     margin: 50px auto;
     height: auto;
-    height: auto;
- 
     box-shadow: 5px 9px 21px 0 rgb(46, 61, 73,  20%);
+}
+.marg {
+    margin-top: 115px;
+    
 }
